# structural-fem-taskgen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
data/: properties.json
data/latex_templates/: beam_template.backup.tex  beam_template.tex
docs/: beam_types.odt  cantilever_example.py
docs/plane2d_geometries/: Geometria_PSN_PSO.txt
examples/: beam_description_PL.tex  plane2d_description_PL.tex
src/: generator.py
src/generators/: beam_generator.py  plane2d_generator.py
src/pdf_generator/: beam_pdf_generator.py  description_pdf_generator.py  pdf_generator.py  plane2d_template.tex  todo.md
src/solver/: beam_plotter.py  beam_solver.py  plane2d_plotter.py  plane2d_solver.py
src/taskgen/: __init__.py  cli.py
src/taskgen/core/: beam_generator.py  beam_plotter.py  config.py  description_pdf_generator.py  orchestrator.py  orchestrator_adapter.py  plane2d_generator.py  plane2d_plotter.py  plane2d_solver.py
src/taskgen/docker/: entrypoint.sh
tests/: test_beam_generator.py  test_beam_solver.py  test_generator.py  test_plane2d_solver.py  test_solver.py
