[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.ruff_cache
  | build
  | dist
  | docs       # example notebooks / scripts
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Flake-8 rules: E (pycodestyle) + F (pyflakes) + I (isort)
select = ["E", "F", "I"]
ignore = [
  "E501",     # line length – Black already enforces
]

[tool.ruff.lint.isort]
known-first-party = ["structural_fem_taskgen"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
strict = false

[tool.pytest.ini_options]
addopts = "-q -ra"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"